Add Google AdSense meta tag to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="google-adsense-account" content="ca-pub-3502242400387658">
 
     <!-- Responsive Meta -->
     <meta
